--- a/MenuCycle.Tests/packages.config
+++ b/MenuCycle.Tests/packages.config
@@ -3,6 +3,8 @@
   <package id="Appium.WebDriver" version="3.0.0.2" targetFramework="net462" />
   <package id="Bogus" version="22.0.8" targetFramework="net462" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net462" />
+  <package id="DotNetSeleniumExtras.PageObjects" version="3.11.0" targetFramework="net462" />
+  <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net462" />
   <package id="Fourth.Automation.Framework.Core" version="3.0.60" targetFramework="net462" />
   <package id="Fourth.Automation.Framework.Mobile" version="3.0.60" targetFramework="net462" />
   <package id="Fourth.Automation.Framework.Reporting" version="3.0.60" targetFramework="net462" />
@@ -32,7 +34,7 @@
   <package id="Selenium.WebDriver" version="3.11.2" targetFramework="net462" />
   <package id="SlowMonkey" version="1.1.1" targetFramework="net462" />
   <package id="SpecFlow" version="2.3.2" targetFramework="net462" />
-  <package id="System.AppContext" version="4.3.0" targetFramework="net462" />
+  <package id="System.AppContext" version="4.3.0" targetFramework="net462" requireReinstallation="true" />
   <package id="System.Collections" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net462" />
@@ -51,8 +53,8 @@
   <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net462" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net462" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net462" />
-  <package id="System.Linq" version="4.3.0" targetFramework="net462" />
-  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net462" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net462" requireReinstallation="true" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net462" requireReinstallation="true" />
   <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net462" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net462" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net462" />
@@ -66,21 +68,21 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net462" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net462" />
-  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net462" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net462" requireReinstallation="true" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime.Loader" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net462" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net462" requireReinstallation="true" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net462" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net462" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net462" />
-  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net462" />
+  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net462" requireReinstallation="true" />
   <package id="System.Threading" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net462" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net462" requireReinstallation="true" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net462" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net462" />
 </packages>
