--- a/MenuCycle.Data/MenuCycle.Data.csproj
+++ b/MenuCycle.Data/MenuCycle.Data.csproj
@@ -6,6 +6,15 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <NoWarn>1701;1702;1705;</NoWarn>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Firefox|AnyCPU' ">
+    <IntermediateOutputPath>obj\Firefox</IntermediateOutputPath>
+    <DebugType></DebugType>
+    <Optimize>false</Optimize>
+    <OutputPath>bin\Firefox</OutputPath>
+    <DefineConstants></DefineConstants>
+    <NoWarn></NoWarn>
+    <NoStdLib>false</NoStdLib>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Bogus" Version="22.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.0" />
