--- a/MenuCycle.Tests/packages.config
+++ b/MenuCycle.Tests/packages.config
@@ -5,9 +5,9 @@
   <package id="Castle.Core" version="4.2.1" targetFramework="net462" />
   <package id="DotNetSeleniumExtras.PageObjects" version="3.11.0" targetFramework="net462" />
   <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net462" />
-  <package id="Fourth.Automation.Framework.Core" version="3.0.60" targetFramework="net462" />
-  <package id="Fourth.Automation.Framework.Mobile" version="3.0.60" targetFramework="net462" />
-  <package id="Fourth.Automation.Framework.Reporting" version="3.0.60" targetFramework="net462" />
+  <package id="Fourth.Automation.Framework.Core" version="3.0.64" targetFramework="net471" />
+  <package id="Fourth.Automation.Framework.Mobile" version="3.0.64" targetFramework="net471" />
+  <package id="Fourth.Automation.Framework.Reporting" version="3.0.64" targetFramework="net471" />
   <package id="log4net" version="2.0.8" targetFramework="net462" />
   <package id="Microsoft.CSharp" version="4.4.1" targetFramework="net462" />
   <package id="Microsoft.EntityFrameworkCore" version="2.0.2" targetFramework="net462" />
@@ -29,7 +29,8 @@
   <package id="NUnit" version="3.7.1" targetFramework="net462" />
   <package id="Polly" version="5.9.0" targetFramework="net462" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net462" />
-  <package id="Selenium.Chrome.WebDriver" version="2.37" targetFramework="net462" />
+  <package id="Selenium.Chrome.WebDriver" version="2.38" targetFramework="net471" />
+  <package id="Selenium.Firefox.WebDriver" version="0.20.0" targetFramework="net471" />
   <package id="Selenium.Support" version="3.11.2" targetFramework="net462" />
   <package id="Selenium.WebDriver" version="3.11.2" targetFramework="net462" />
   <package id="SlowMonkey" version="1.1.1" targetFramework="net462" />
