--- a/MenuCycle.Tests/packages.config
+++ b/MenuCycle.Tests/packages.config
@@ -5,9 +5,10 @@
   <package id="Castle.Core" version="4.2.1" targetFramework="net462" />
   <package id="DotNetSeleniumExtras.PageObjects" version="3.11.0" targetFramework="net462" />
   <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net462" />
-  <package id="Fourth.Automation.Framework.Core" version="3.0.64" targetFramework="net471" />
-  <package id="Fourth.Automation.Framework.Mobile" version="3.0.64" targetFramework="net471" />
-  <package id="Fourth.Automation.Framework.Reporting" version="3.0.64" targetFramework="net471" />
+  <package id="Fourth.Automation.Framework.Core" version="3.0.69" targetFramework="net471" />
+  <package id="Fourth.Automation.Framework.Mobile" version="3.0.69" targetFramework="net471" />
+  <package id="Fourth.Automation.Framework.Reporting" version="3.0.69" targetFramework="net471" />
+  <package id="FourthApp.Pages" version="1.0.1" targetFramework="net471" />
   <package id="log4net" version="2.0.8" targetFramework="net462" />
   <package id="Microsoft.CSharp" version="4.4.1" targetFramework="net462" />
   <package id="Microsoft.EntityFrameworkCore" version="2.0.2" targetFramework="net462" />
