--- a/MenuCycle.Tests/MenuCycle.Tests.csproj
+++ b/MenuCycle.Tests/MenuCycle.Tests.csproj
@@ -307,6 +307,7 @@
     <Compile Include="PageObjects\Planning\PlanningTabDays\NestedRecipe.cs" />
     <Compile Include="Models\RecipeModel.cs" />
     <Compile Include="Support\Helpers\Do.cs" />
+    <Compile Include="Steps\RecipeSteps.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Chrome.config">
