--- a/MenuCycle.Tests/App.config
+++ b/MenuCycle.Tests/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <configSections>
   <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow"/>
-  <section name="fourth" type="Fourth.Automation.Framework.Configuration.FourthSection,  Fourth.Automation.Framework.Core"/>
+  <section name="fourth" type="Fourth.Automation.Framework.Configuration.FourthSection, Fourth.Automation.Framework.Core"/>
   <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
   <section name="report" type="Fourth.Automation.Framework.Reporting.Configuration.ReportSection, Fourth.Automation.Framework.Reporting"/>
   </configSections>
@@ -43,10 +43,14 @@
     
     <stepAssemblies>
         <stepAssembly assembly="Fourth.Automation.Framework.Core"/>
-        <stepAssembly assembly="Fourth.Automation.Framework.Core"/>
+        <stepAssembly assembly="Fourth.Automation.SpecFlow.Extensions"/>
         <stepAssembly assembly="Fourth.Automation.Framework.Reporting"/>
     </stepAssemblies>
-  <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --></specFlow>
+  <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
+  <plugins>
+    <add name="SpecFlow.Autofac" type="Runtime"/>
+  </plugins>
+</specFlow>
 <fourth driverType="" serverUrl="" driverDirectory="">
 <reporting keepScreenshot="false" takeScreenshotOnError="false"/>
 <timeout driverCommands="00:00:59" defaultWait="00:00:59"/>
