--- a/MenuCycle.Tests/packages.config
+++ b/MenuCycle.Tests/packages.config
@@ -1,39 +1,40 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Appium.WebDriver" version="3.0.0.2" targetFramework="net462" />
+  <package id="Autofac" version="4.6.2" targetFramework="net471" />
   <package id="Bogus" version="22.0.8" targetFramework="net462" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net462" />
   <package id="DotNetSeleniumExtras.PageObjects" version="3.11.0" targetFramework="net462" />
   <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net462" />
-  <package id="Fourth.Automation.Framework.Core" version="3.0.69" targetFramework="net471" />
-  <package id="Fourth.Automation.Framework.Mobile" version="3.0.69" targetFramework="net471" />
-  <package id="Fourth.Automation.Framework.Reporting" version="3.0.69" targetFramework="net471" />
-  <package id="FourthApp.Pages" version="1.0.1" targetFramework="net471" />
+  <package id="Fourth.Automation.Framework.Core" version="4.0.6" targetFramework="net471" />
+  <package id="Fourth.Automation.Framework.Mobile" version="4.0.6" targetFramework="net471" />
+  <package id="Fourth.Automation.Framework.Reporting" version="4.0.6" targetFramework="net471" />
+  <package id="FourthApp.Pages" version="1.0.2" targetFramework="net471" />
   <package id="log4net" version="2.0.8" targetFramework="net462" />
   <package id="Microsoft.CSharp" version="4.4.1" targetFramework="net462" />
-  <package id="Microsoft.EntityFrameworkCore" version="2.0.2" targetFramework="net462" />
-  <package id="Microsoft.EntityFrameworkCore.Relational" version="2.0.2" targetFramework="net462" />
-  <package id="Microsoft.EntityFrameworkCore.SqlServer" version="2.0.2" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Caching.Abstractions" version="2.0.1" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Caching.Memory" version="2.0.1" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.1" targetFramework="net462" />
+  <package id="Microsoft.EntityFrameworkCore" version="2.0.3" targetFramework="net471" />
+  <package id="Microsoft.EntityFrameworkCore.Relational" version="2.0.3" targetFramework="net471" />
+  <package id="Microsoft.EntityFrameworkCore.SqlServer" version="2.0.3" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="2.0.2" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="2.0.2" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.2" targetFramework="net471" />
   <package id="Microsoft.Extensions.DependencyInjection" version="2.0.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Logging" version="2.0.1" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.1" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Options" version="2.0.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging" version="2.0.2" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.2" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Options" version="2.0.2" targetFramework="net471" />
   <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net462" />
   <package id="Microsoft.NETCore.Platforms" version="2.0.2" targetFramework="net462" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net462" />
-  <package id="NETStandard.Library" version="2.0.1" targetFramework="net462" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
   <package id="NUnit" version="3.7.1" targetFramework="net462" />
-  <package id="Polly" version="5.9.0" targetFramework="net462" />
+  <package id="Polly" version="6.0.1" targetFramework="net471" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net462" />
   <package id="Selenium.Chrome.WebDriver" version="2.38" targetFramework="net471" />
   <package id="Selenium.Firefox.WebDriver" version="0.20.0" targetFramework="net471" />
-  <package id="Selenium.Support" version="3.11.2" targetFramework="net462" />
-  <package id="Selenium.WebDriver" version="3.11.2" targetFramework="net462" />
+  <package id="Selenium.Support" version="3.12.0" targetFramework="net471" />
+  <package id="Selenium.WebDriver" version="3.12.0" targetFramework="net471" />
   <package id="SlowMonkey" version="1.1.1" targetFramework="net462" />
   <package id="SpecFlow" version="2.3.2" targetFramework="net462" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net462" requireReinstallation="true" />
