--- a/MenuCycle.Tests/Jenkinsfile
+++ b/MenuCycle.Tests/Jenkinsfile
@@ -17,9 +17,9 @@ msbuild = ''
 //List of App.config browser transformations to be run by Jenkins
 browsersList = ['Chrome']
 
-solutionName = "Fourth.MenuCycles.Automation.sln"
-projectPath = "MenuCycles.Tests"
-projectName = "MenuCycles.Tests.csproj"
+solutionName = "Fourth.MenuCycle.Automation.sln"
+projectPath = "MenuCycle.Tests"
+projectName = "MenuCycle.Tests.csproj"
 
 node('IE1UIBLD03') {
 	stage ('Get Source Code') {
@@ -164,7 +164,7 @@ def runTestsByFile(fileName)
 def buildAndRunSmokeTests(configurationName) {
 	bat "\"$msbuild\" \"${solutionPath}\" /t:Rebuild $commonReleaseBuildParams /p:Configuration=\"${configurationName}\""
 
-	def dllPath = "$projectPath/bin/${configurationName}/MenuCycles.Tests.dll"
+	def dllPath = "$projectPath/bin/${configurationName}/MenuCycle.Tests.dll"
 	def resultsPath = "${configurationName}TestResults.xml"
 
     bat "nunit ${dllPath} -where \"cat == Smoke && cat != EMEA && cat != NA\""
