- fixed solution name in jenkinsfile

--- a/MenuCycle.Tests/Jenkinsfile
+++ b/MenuCycle.Tests/Jenkinsfile
@@ -17,7 +17,7 @@ msbuild = ''
 //List of App.config browser transformations to be run by Jenkins
 browsersList = ['Chrome']
 
-solutionName = "Fourth.MenuCycle.Automation.sln"
+solutionName = "MenuCycle.Automation.sln"
 projectPath = "MenuCycle.Tests"
 projectName = "MenuCycle.Tests.csproj"
 
