- changed branch to MASTER

--- a/MenuCycle.Tests/Jenkinsfile
+++ b/MenuCycle.Tests/Jenkinsfile
@@ -101,7 +101,7 @@ node('IE1UIBLD03') {
 }
 
 def onReleaseBranch() {
-    return env.BRANCH_NAME == 'develop'
+    return env.BRANCH_NAME == 'master'
 }
 
 def buildConfigurations(list){
