--- a/MenuCycle.Tests/Jenkinsfile
+++ b/MenuCycle.Tests/Jenkinsfile
@@ -49,45 +49,33 @@ node('IE1UIBLD03') {
 		bat "\"$msbuild\" ./$projectPath/$projectName /p:OutDir=\"$env.WORKSPACE\" $commonReleaseBuildParams /p:Configuration=Release"
 	}
 
-	if (onReleaseBranch()) {
-        try {
-            stage ('Browser Tests') {
-                //Builds all configurations in order to generate a test dll
-                buildConfigurations(browsersList)
+	def jobName = "${env.JOB_NAME}"
 
-                //Run the tests specified in the text file using nunit
-                runTestsByFile("$projectPath/BrowserTests.txt")
-            }
-        } catch (e) {
-            echo e.message
-            currentBuild.result = "FAILED"
-        }
-
-         // try {
-		// 	stage ('App Tests') {
-
-        //         //Builds all configurations in order to generate a test dll
-        //         buildConfigurations(appsList)
-
-        //         //Run the tests specified in the text file using nunit
-        //         runTestsByFile('MyAppConfigurationsToRun.txt')
-		// 	}
-		// } catch (e) {
-		// 	echo e.message
-		// 	currentBuild.result = "FAILED"
-		// }
-    }
+	if (jobName.contains("Smoke")
+	{
+		try {
+				stage ('Browser Smoke Tests') {
+						buildAndRunSmokeTests("Chrome")
+				}
+		} catch (e) {
+				echo e.message
+				currentBuild.result = "FAILED"
+		}
+  }
     else {
-        try {
-            stage ('Browser Smoke Tests') {
-                buildAndRunSmokeTests("Chrome")
-            }
-        } catch (e) {
-            echo e.message
-            currentBuild.result = "FAILED"
-        }
-    }
+			try {
+					stage ('Browser Tests') {
+							//Builds all configurations in order to generate a test dll
+							buildConfigurations(browsersList)
 
+							//Run the tests specified in the text file using nunit
+							runTestsByFile("$projectPath/BrowserTests.txt")
+					}
+			} catch (e) {
+					echo e.message
+					currentBuild.result = "FAILED"
+			}
+    }
 
     try {
         stage('Test Results Archive') {
