- packages updated - new tests - new and optimized page objects

--- a/MenuCycle.Tests/App.config
+++ b/MenuCycle.Tests/App.config
@@ -42,9 +42,12 @@
 <specFlow>
     
     <stepAssemblies>
-        <stepAssembly assembly="Fourth.Automation.Framework.Core"/>
-        <stepAssembly assembly="Fourth.Automation.SpecFlow.Extensions"/>
-        <stepAssembly assembly="Fourth.Automation.Framework.Reporting"/>
+        <!-- This attribute is required in order to use StepArgument Transformation as described here; 
+    https://github.com/marcusoftnet/SpecFlow.Assist.Dynamic/wiki/Step-argument-transformations  -->
+    <stepAssembly assembly="SpecFlow.Assist.Dynamic"/>
+    <stepAssembly assembly="Fourth.Automation.Framework.Core"/>
+    <stepAssembly assembly="Fourth.Automation.SpecFlow.Extensions"/>
+    <stepAssembly assembly="Fourth.Automation.Framework.Reporting"/>
     </stepAssemblies>
   <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
   <plugins>
