--- a/MenuCycle.Tests/packages.config
+++ b/MenuCycle.Tests/packages.config
@@ -1,30 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Appium.WebDriver" version="3.0.0.2" targetFramework="net462" />
-  <package id="Autofac" version="4.6.2" targetFramework="net471" />
-  <package id="Bogus" version="22.0.8" targetFramework="net462" />
+  <package id="Autofac" version="4.8.1" targetFramework="net471" />
+  <package id="Bogus" version="22.1.2" targetFramework="net471" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net462" />
   <package id="DotNetSeleniumExtras.PageObjects" version="3.11.0" targetFramework="net462" />
   <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net462" />
-  <package id="Fourth.Automation.Framework.Core" version="4.0.6" targetFramework="net471" />
-  <package id="Fourth.Automation.Framework.Mobile" version="4.0.6" targetFramework="net471" />
-  <package id="Fourth.Automation.Framework.Reporting" version="4.0.6" targetFramework="net471" />
+  <package id="Dynamitey" version="2.0.9.136" targetFramework="net471" />
+  <package id="Fourth.Automation.Framework.Core" version="4.0.15" targetFramework="net471" />
+  <package id="Fourth.Automation.Framework.Mobile" version="4.0.15" targetFramework="net471" />
+  <package id="Fourth.Automation.Framework.Reporting" version="4.0.15" targetFramework="net471" />
   <package id="FourthApp.Pages" version="1.0.2" targetFramework="net471" />
+  <package id="ImpromptuInterface" version="7.0.1" targetFramework="net471" />
   <package id="log4net" version="2.0.8" targetFramework="net462" />
-  <package id="Microsoft.CSharp" version="4.4.1" targetFramework="net462" />
-  <package id="Microsoft.EntityFrameworkCore" version="2.0.3" targetFramework="net471" />
-  <package id="Microsoft.EntityFrameworkCore.Relational" version="2.0.3" targetFramework="net471" />
-  <package id="Microsoft.EntityFrameworkCore.SqlServer" version="2.0.3" targetFramework="net471" />
-  <package id="Microsoft.Extensions.Caching.Abstractions" version="2.0.2" targetFramework="net471" />
-  <package id="Microsoft.Extensions.Caching.Memory" version="2.0.2" targetFramework="net471" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.2" targetFramework="net471" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Logging" version="2.0.2" targetFramework="net471" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.2" targetFramework="net471" />
-  <package id="Microsoft.Extensions.Options" version="2.0.2" targetFramework="net471" />
-  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.NETCore.Platforms" version="2.0.2" targetFramework="net462" />
+  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net471" />
+  <package id="Microsoft.EntityFrameworkCore" version="2.1.0" targetFramework="net471" />
+  <package id="Microsoft.EntityFrameworkCore.Abstractions" version="2.1.0" targetFramework="net471" />
+  <package id="Microsoft.EntityFrameworkCore.Analyzers" version="2.1.0" targetFramework="net471" />
+  <package id="Microsoft.EntityFrameworkCore.Relational" version="2.1.0" targetFramework="net471" />
+  <package id="Microsoft.EntityFrameworkCore.SqlServer" version="2.1.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="2.1.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="2.1.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Configuration" version="2.1.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.1.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Logging" version="2.1.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Options" version="2.1.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Primitives" version="2.1.0" targetFramework="net471" />
+  <package id="Microsoft.NETCore.Platforms" version="2.1.0" targetFramework="net471" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
@@ -33,19 +39,21 @@
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net462" />
   <package id="Selenium.Chrome.WebDriver" version="2.38" targetFramework="net471" />
   <package id="Selenium.Firefox.WebDriver" version="0.20.0" targetFramework="net471" />
-  <package id="Selenium.Support" version="3.12.0" targetFramework="net471" />
-  <package id="Selenium.WebDriver" version="3.12.0" targetFramework="net471" />
+  <package id="Selenium.Support" version="3.12.1" targetFramework="net471" />
+  <package id="Selenium.WebDriver" version="3.12.1" targetFramework="net471" />
   <package id="SlowMonkey" version="1.1.1" targetFramework="net462" />
   <package id="SpecFlow" version="2.3.2" targetFramework="net462" />
-  <package id="System.AppContext" version="4.3.0" targetFramework="net462" requireReinstallation="true" />
+  <package id="SpecFlow.Assist.Dynamic" version="1.3.1" targetFramework="net471" />
+  <package id="System.AppContext" version="4.3.0" targetFramework="net471" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net471" />
   <package id="System.Collections" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net462" />
-  <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net462" />
-  <package id="System.ComponentModel.Annotations" version="4.4.1" targetFramework="net462" />
+  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net471" />
+  <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net471" />
   <package id="System.Console" version="4.3.1" targetFramework="net462" />
-  <package id="System.Data.SqlClient" version="4.4.3" targetFramework="net462" />
+  <package id="System.Data.SqlClient" version="4.5.0" targetFramework="net471" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net462" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net462" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net471" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net462" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net462" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net462" />
@@ -56,36 +64,38 @@
   <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net462" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net462" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net462" />
-  <package id="System.Linq" version="4.3.0" targetFramework="net462" requireReinstallation="true" />
-  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net462" requireReinstallation="true" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net471" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net471" />
   <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net462" />
+  <package id="System.Memory" version="4.5.0" targetFramework="net471" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net462" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net462" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net471" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net462" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net462" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net462" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net462" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net462" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net471" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net462" />
-  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net462" requireReinstallation="true" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net471" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime.Loader" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net462" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net462" requireReinstallation="true" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net471" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net462" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net462" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net462" />
-  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net462" requireReinstallation="true" />
+  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net471" />
   <package id="System.Threading" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net462" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net462" requireReinstallation="true" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net471" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net462" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net462" />
 </packages>
