--- a/MenuCycle.Tests/packages.config
+++ b/MenuCycle.Tests/packages.config
@@ -8,6 +8,7 @@
   <package id="Dynamitey" version="2.0.9.136" targetFramework="net471" />
   <package id="Fourth.Automation.Framework.Core" version="4.0.15" targetFramework="net471" />
   <package id="Fourth.Automation.Framework.Mobile" version="4.0.15" targetFramework="net471" />
+  <package id="Fourth.Automation.Framework.Reporting" version="4.0.15" targetFramework="net471" />
   <package id="FourthApp.Pages" version="1.0.2" targetFramework="net471" />
   <package id="ImpromptuInterface" version="7.0.1" targetFramework="net471" />
   <package id="log4net" version="2.0.8" targetFramework="net462" />
