Add new case for no user

--- a/MenuCycle.Tests/App.config
+++ b/MenuCycle.Tests/App.config
@@ -10,7 +10,7 @@
   
   <appSettings>
     <add key="Engage.Url" value="https://qapartial-fourth-app.cs87.force.com"/>
-    <add key="Engage.User" value="sindhu.t15820@fourth.com"/>
+    <add key="Engage.User" value="martin.petkov@fourth.com"/>
     <add key="Engage.Password" value="Mypassword_001"/>
   </appSettings>
   <runtime>
