--- a/MenuCycle.Tests/App.Nexus7.config
+++ b/MenuCycle.Tests/App.Nexus7.config
@@ -1,16 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<!-- For more information on using transformations 
-     see the web.config examples at http://go.microsoft.com/fwlink/?LinkId=214134. -->
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <appSettings>
     <add key="WebviewName" value="WEBVIEW_com.fourth.marketplace" xdt:Transform="Replace" xdt:Locator="Match(key)"/>
   </appSettings>
-  <fourth driverType="Android" serverUrl="http://127.0.0.1:4545/wd/hub/" xdt:Transform="Replace">
-    <timeout driverCommands="00:02:00"/>
+  <fourth driverType="Android" serverUrl="http://127.0.0.1:4545/wd/hub/" driverDirectory="" xdt:Transform="Replace">
+    <reporting keepScreenshot="false" takeScreenshotOnError="false" />
+	<timeout driverCommands="00:03:00"/>
     <capabilities>
-      <add key="platformVersion" value="7.0"/>
+      <add key="platformVersion" value="5.1.1"/>
       <add key="clearSystemFiles" value="true"/>
-      <add key="deviceName" value="Galaxy S8+"/>
+      <add key="deviceName" value="Nexus 7"/>
       <add key="appPackage" value="com.fourth.marketplace.qa"/>
       <add key="appActivity" value="com.salesforce.androidsdk.phonegap.ui.SalesforceDroidGapActivity"/>
       <add key="recreateChromeDriverSessions" value="true"/>
